--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.16
+  shared_preferences: ^2.3.4
 
 dev_dependencies:
   flutter_test:
